Fix the flaky Warmup URL test in data reduction proxy

Remove the part of the test that waits for the fetch to succeed. The test
is flaking because sometimes the URL may be fetched before the callback
is set. This causes the run loop to wait forever.

BUG=702748
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2765763003
Cr-Commit-Position: refs/heads/master@{#458917}

Former-commit-id: dfc3e7204e434185cbaa0d6cb48ae0b37481f007