components/data_reduction_proxy/core/browser/data_reduction_proxy_config_test_utils.h
@@ -118,7 +118,6 @@ class TestDataReductionProxyConfig : public DataReductionProxyConfig {
   void SetIsCaptivePortal(bool is_captive_portal);
 
   using DataReductionProxyConfig::UpdateConfigForTesting;
-  using DataReductionProxyConfig::SetWarmupURLFetcherCallbackForTesting;
 
  private:
   bool GetIsCaptivePortal() const override;
